# mlops-Zoomcamp

./: .gitignore  HW-1.ipynb  README.md
notebooks/project-01/: .env  .gitignore  Ensemble_Hard_model.joblib  Ensemble_Soft_model.joblib  Makefile  Stacking_LGBM_model.joblib  Stacking_Logistic_model.joblib  config.toml  data_process.py  docker-compose.yml  entrypoint.sh  file_tree.txt  heart.ipynb  main.py  mlflow.sh  model_results.json  pyproject.toml  requirements.txt  train.py
notebooks/project-01/api/: .env  main.py  pyproject.toml  requirements.txt  start-api.sh
notebooks/project-01/api/config/: config.py  s3_utils.py
notebooks/project-01/api/models/: base_model.py
notebooks/project-01/api/utils/: __init__.py  s3_utils.py
notebooks/project-01/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/project-01/catboost_info/learn/: events.out.tfevents
notebooks/project-01/config/: config.toml  config.yaml  model_params.yaml
notebooks/project-01/docker/: Dockerfile.api  Dockerfile.mlflow  Dockerfile.streamlit  Dockerfile.train  docker-compose.yml  docker-monitoring-compose.yml
notebooks/project-01/evidently_reports/: evidently_test_suite_20240726_230249.html  evidently_test_suite_20240726_230335.html  evidently_test_suite_20240730_114840.html  evidently_test_suite_20240731_181000.html  evidently_test_suite_20240731_181057.html  evidently_test_suite_20240731_181106.html
notebooks/project-01/grafana-config/dashboards/: data_drift.json
notebooks/project-01/kubernetes/docker/: Dockerfile.api  Dockerfile.mlflow  Dockerfile.train
notebooks/project-01/mlflow/mlflow_data/: mlflow.db
notebooks/project-01/mlflow_data/: mlflow.db
notebooks/project-01/models/: Ensemble_Hard_model.joblib  Ensemble_Soft_model.joblib  Stacking_LGBM_model.joblib  Stacking_Logistic_model.joblib  best_model.joblib  evidently_test_suite.html  feature_preprocessor.joblib  model_results.json  preprocessor.joblib  target_preprocessor.joblib
notebooks/project-01/src/: config.py
notebooks/project-01/src/ensemble/: stacking.py  voting.py
notebooks/project-01/src/evaluation/: evaluator.py  metrics.py  visualizations.py
notebooks/project-01/src/models/: catboost.py  ensemble_creator.py  extra_trees.py  knn.py  lgbm.py  logistic_regression.py  mlp.py  model_trainer.py  random_forest.py  svm.py  xgboost.py
notebooks/project-01/src/reporting/: evidently_reporter.py
notebooks/project-01/src/utils/: file_utils.py  mlflow_utils.py  (+1 more)
notebooks/project-01/streamlit/: app.py  pyproject.toml  requirements.txt
notebooks/project-01/tests/: test_data_loader.py  test_data_preprocessor.py  test_evaluation.py  test_integration.py  test_models.py
(+257 files in other folders)
