[tool.poetry]
name = "heart-disease-prediction"
version = "0.1.0"
description = "A machine learning project for heart disease prediction"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
mlflow = "^1.17.0"
catboost = "^0.26.1"
lightgbm = "^3.2.1"
xgboost = "^1.4.2"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
