[tool.poetry]
name = "heart-disease-prediction"
version = "0.1.0"
description = "A MLOPS project for heart disease prediction"
authors = ["makur.subhrajit@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
mlflow = "^1.17.0"
catboost = "^0.26.1"
lightgbm = "^3.2.1"
xgboost = "^1.4.2"
joblib = "^1.0.1"
prefect = "^2.10.8"
tqdm = "^4.62.3"
requests = "^2.26.0"
pyarrow = "^8.0.0"
psycopg = "^3.1.8"
psycopg-binary = "^3.1.8"
evidently = "^0.2.8"
numpy = "^1.21.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
